site/multiDim/MultiDimDataPageSettingsPanel.scss
$indent: 16px;

$toggle-height: 40px;

.md-settings-row {
    display: flex;
    gap: 16px;

    .md-settings__configure-data {
        flex-shrink: 0;
        padding-top: 12px;
        color: $blue-60;

        @include sm-only {
            margin-bottom: 8px;
            padding-top: 0;
            font-size: 0.625rem;
            color: $blue-50;
        }
    }

    .md-settings__dropdowns {
        display: flex;
        flex-wrap: wrap;
        gap: 16px;

        @include sm-only {
            gap: 8px;
        }
    }

    .md-settings__dropdown-toggle {
        display: flex;
        align-items: center;
        color: $secondary-text;
        background: white;
        border: 1px solid $light-stroke;
        font: $medium 13px/16px $lato;
        letter-spacing: 0.01em;
        border-radius: 4px;
        padding: 8px 12px;
        height: $toggle-height;
        cursor: pointer;

        svg {
            margin-left: 5px;
        }

        &:hover:not([data-disabled]),
        &:focus:not([data-disabled]) {
            border-color: $blue-30;
        }

        &:hover {
            background: $gray-5;
        }

        &[data-pressed],
        &:active {
            background: $active-fill;
            border: 1px solid $active-fill;
        }

        &[data-pressed] {
            cursor: default;
            color: $active-text;
        }

        &[data-disabled] {
            color: $gray-60;
            cursor: default;
            background: $gray-5;

            .md-settings__dropdown-current-choice {
                color: $gray-70;
            }
        }
    }

    .md-settings__dropdown-label {
        &::after {
            content: ":";
            margin-right: 3px;
        }
    }

    .md-settings__dropdown-current-choice {
        color: $primary-text;
        max-width: 150px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    @include sm-only {
        display: block;
    }
}

.md-settings__dropdown {
    position: relative;
}

.md-menu {
    $primary-text: $gray-80;
    $secondary-text: $gray-60;

    width: 400px;
    background: white;
    border-radius: 4px;
    box-shadow: 0px 4px 23px 4px #0000000f;
    z-index: $zindex-controls-popup;
    overflow-y: auto;

    .overlay-header {
        padding-bottom: 0;
    }

    .md-label {
        display: block;
    }

    .md-description {
        color: $secondary-text;
        font-size: 0.8em;
    }

    .menu-dimension__description {
        margin: 0 $indent;
    }

    .md-menu__options {
        padding: 0 $indent;
    }

    .md-menu__group {
        .md-menu__group-label {
            color: $light-text;
            font-weight: 600;
            font-size: 14px;
        }

        margin-bottom: 0.25em;
    }

    .md-menu__radio-button {
        padding: 16px 0;
        border-bottom: 1px solid $gray-20;
        cursor: pointer;

        &:last-child {
            border-bottom: none;
        }
    }

    @include sm-only {
        width: 264px;
    }
}

